--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,6 +284,56 @@ section{
 }
 
 
+/* all-posts */
+
+.all-posts .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 35rem);
+    gap: 1.5rem;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+
+.all-posts .box-container .box{
+    padding: 2rem;
+    background: var(--white);
+    border: var(--border);
+    border-radius: .5rem;
+}
+
+.all-posts .box-container .box .image{
+    width: 100%;
+    height: 20rem;
+    border-radius: .5rem;
+    object-fit: cover;
+    margin-bottom: 1.5rem;
+}
+
+
+.all-posts .box-container .box .title{
+    font-size: 2rem;
+    color: var(--black);
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+}
+
+.all-posts .box-container .box .total_reviews{
+    font-size: 1.7rem;
+    padding: 1rem 0;
+}
+
+.all-posts .box-container .box .total_reviews i{
+    color: var(--orange);
+}
+
+.all-posts .box-container .box .total_reviews span{
+    color: var(--light-color);
+}
+
+
+
+
 
 /* media query */
 
@@ -303,5 +353,12 @@ section{
     
     html{
         font-size: 50%;
+    }
+
+    
+    /* all-posts */
+
+    .all-posts .box-container{
+        grid-template-columns: 1fr;       
     }
 }
